# rust-receipt-engine

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: CONTRIBUTING.md  INDEX.md  RUNBOOK.md
src/: db.rs  extractor.rs  lib.rs  main.rs  models.rs  parser.rs  sheets.rs  whatsapp.rs
src/api/: handlers.rs  mod.rs  models.rs
tests/: api_integration.rs  parser_tests.rs
