[package]
name = "receipt-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime — lets us write non-blocking code with async/await
tokio = { version = "1", features = ["full"] }

# HTTP client — used to talk to the Green API REST endpoints
reqwest = { version = "0.12", features = ["json"] }

# JSON serialisation / deserialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Loads variables from a .env file into the process environment
dotenv = "0.15"

# Tesseract OCR bindings
tesseract = "0.14"

# Regular expressions for receipt parsing
regex = "1"
