[package]
name = "receipt-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime — lets us write non-blocking code with async/await
tokio = { version = "1", features = ["full"] }

# HTTP client — used to talk to the Green API REST endpoints
reqwest = { version = "0.12", features = ["json"] }

# JSON serialisation / deserialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Loads variables from a .env file into the process environment
dotenv = "0.15"

# Tesseract OCR bindings
tesseract = "0.14"

# Regular expressions for receipt parsing
regex = "1"

# Structured logging — level filtering via RUST_LOG env var
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Google OAuth2 — service account authentication for the Sheets API
# Default features include hyper-rustls (TLS), ring (crypto), and service-account support
yup-oauth2 = "12"

# Timestamp formatting for AcknowledgedAt column — already a transitive dep via yup-oauth2,
# declared explicitly here to use the formatting feature for RFC 3339 output
time = { version = "0.3", features = ["formatting"] }

# HTTP server — Axum REST API for the circle dashboard frontend
axum = "0.8"

# CORS middleware for the Axum server — permits localhost:3001 in development
tower-http = { version = "0.6", features = ["cors"] }

# SurrealDB embedded database — RocksDB engine, persists to ./data.surreal
surrealdb = { version = "3", features = ["kv-rocksdb", "kv-mem"] }
# Direct dep so the SurrealValue derive macro resolves surrealdb_types:: paths correctly
surrealdb-types = "3"

# Timestamp-based payment ID generation
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# HTTP service test utilities — used in API integration tests
tower = { version = "0.5", features = ["util"] }
# Read axum response bodies in integration tests
http-body-util = "0.1"
